--- a/src/main/resources/static/styles.scss
+++ b/src/main/resources/static/styles.scss
@@ -13,6 +13,8 @@
   $box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3),
   $menu-label-color: variables.$black,
   $menu-label-font-size: 0.8em,
+
+  $panel-shadow: 0 4px 20px rgba(0, 0, 0, 0.3),
 );
 
 @use "aside";
