--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,8 +49,8 @@
                         <div class="level">
                             <div class="level-item">
                                 <div>
-                                    <p class="heading">Anzahl Videos</p>
-                                    <p class="title is-5" th:text="${countVids}"></p>
+                                    <p class="heading" th:text="${'Anzahl Videos: '+ countVids}">Anzahl Videos</p>
+
                                 </div>
                             </div>
                             <div class="level-item">
